testing/Travis/testcases/prototype/shouldSucceed/ClassyInterfaces.adl
CONTEXT ClassyInterfaces IN ENGLISH


INTERFACE NoClassInterface : I[ONE]
BOX[ "Dummy"  : I ]

INTERFACE ClassyInterface CLASS Advanced : I[ONE]
BOX[ "Dummy"  : I ]
   
INTERFACE StringyInterface CLASS "stringy class" : I[ONE]
BOX[ "Dummy"  : I ]

ENDCONTEXT
