testing/Travis/testcases/prototype/shouldFail/ParserOrTypecheckFailures/443_InterfaceRefType.adl
CONTEXT Issue443 IN ENGLISH

INTERFACE Main : I[A]
  BOX [ l : I[A] INTERFACE B -- Should give a type error
      ]
   
INTERFACE B : I[B]
  BOX [ l : I[B]
      ]
  
ENDCONTEXT
